[gd_scene load_steps=3 format=3 uid="uid://c2a81qxecmi65"]

[ext_resource type="Script" path="res://Core/Settings/PauseMenu.gd" id="1_px3rp"]
[ext_resource type="PackedScene" uid="uid://b32t1figv0qlx" path="res://Core/Settings/OverlayHaze.tscn" id="2_af5hp"]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_px3rp")

[node name="OverlayHaze" parent="." instance=ExtResource("2_af5hp")]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -85.5
offset_right = 48.5
offset_bottom = 85.5

[node name="Resume" type="Button" parent="VBoxContainer"]
offset_right = 97.0
offset_bottom = 31.0
text = "Resume"

[node name="PlayOffline" type="Button" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 97.0
offset_bottom = 66.0
text = "Play Offline"

[node name="Login" type="Button" parent="VBoxContainer"]
offset_top = 70.0
offset_right = 97.0
offset_bottom = 101.0
text = "Log in"

[node name="Options" type="Button" parent="VBoxContainer"]
offset_top = 105.0
offset_right = 97.0
offset_bottom = 136.0
text = "Options"

[node name="Account" type="Button" parent="VBoxContainer"]
visible = false
offset_top = 140.0
offset_right = 97.0
offset_bottom = 171.0
text = "Account"

[node name="Quit" type="Button" parent="VBoxContainer"]
offset_top = 140.0
offset_right = 97.0
offset_bottom = 171.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayOffline" to="." method="_on_play_offline_pressed"]
[connection signal="pressed" from="VBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Account" to="." method="_on_account_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
